# mlflow-dynamodbstore

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  cliff.toml  mkdocs.yml  mlflow.db  pyproject.toml  versions.json
.github/workflows/: ci-lint.yml  ci-tests.yml  docs.yml  release.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/adr/001-single-table-design/: index.html
0.1.0/contributing/development/: index.html
0.1.0/operator-guide/cli-reference/: index.html
0.1.0/operator-guide/monitoring/: index.html
0.1.0/operator-guide/ttl-lifecycle/: index.html
0.1.0/operator-guide/upgrading/: index.html
0.1.0/reference/access-patterns/: index.html
0.1.0/reference/api/: index.html
0.1.0/reference/schema/: index.html
0.1.0/stylesheets/: extra.css
0.1.0/user-guide/configuration/: index.html
0.1.0/user-guide/quickstart/: index.html
0.1.0/user-guide/workspaces/: index.html
0.1.0/user-guide/xray-integration/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/adr/001-single-table-design/: index.html
dev/contributing/development/: index.html
dev/operator-guide/cli-reference/: index.html
dev/operator-guide/monitoring/: index.html
dev/operator-guide/ttl-lifecycle/: index.html
dev/operator-guide/upgrading/: index.html
dev/reference/access-patterns/: index.html
dev/reference/api/: index.html
dev/reference/schema/: index.html
dev/search/: search_index.json
dev/user-guide/configuration/: index.html
dev/user-guide/quickstart/: index.html
dev/user-guide/workspaces/: index.html
dev/user-guide/xray-integration/: index.html
docs/: index.md
docs/adr/: 001-single-table-design.md
docs/contributing/: development.md
docs/operator-guide/: cli-reference.md  monitoring.md  ttl-lifecycle.md  upgrading.md
docs/reference/: access-patterns.md  api.md  schema.md
docs/superpowers/plans/: 2026-03-15-plan1-foundation-core-crud.md  2026-03-15-plan2-search-query-engine.md  2026-03-15-plan3-traces-xray-auth.md  2026-03-15-plan4-lifecycle-cli-docs.md  2026-03-16-e2e-tests.md  2026-03-17-advanced-traces.md  2026-03-17-cli-rework.md  2026-03-17-evaluation-datasets.md  2026-03-17-logged-models.md  2026-03-17-phase2-core-gaps.md  2026-03-17-phase4a-remaining-parity.md  2026-03-17-scorers.md  2026-03-18-query-trace-metrics.md  2026-03-19-fts-bigram-search.md  2026-03-19-model-version-soft-delete.md  2026-03-19-native-sorting-pagination.md  2026-03-19-pagination-tiebreak-overflow.md  2026-03-19-phase5.0-gateway-compat-tests.md  2026-03-19-phase5a-gateway-secrets.md  2026-03-19-phase5b-gateway-model-definitions.md  2026-03-19-phase5c-gateway-endpoints.md  2026-03-19-vendor-mlflow-compatibility-tests.md  2026-03-21-webhooks.md  2026-03-22-s3-artifact-bucket.md
docs/superpowers/specs/: 2026-03-15-mlflow-dynamodbstore-design.md  2026-03-16-evaluation-datasets-design.md  2026-03-17-advanced-traces-design.md  2026-03-17-ai-gateway-design.md  2026-03-17-cli-rework-design.md  2026-03-17-logged-models-design.md  2026-03-17-query-trace-metrics-design.md  2026-03-17-remaining-parity-design.md  2026-03-17-scorers-design.md  2026-03-19-fts-bigram-support.md  2026-03-19-model-version-soft-delete.md  2026-03-19-pagination-tiebreak-overflow.md  2026-03-19-tracking-compat-tests.md  2026-03-19-vendor-mlflow-compatibility-tests.md  2026-03-20-webhooks-design.md  2026-03-22-s3-artifact-bucket-design.md
docs/user-guide/: configuration.md  quickstart.md  workspaces.md  xray-integration.md
src/: mlflow_dynamodbstore_init.pth
src/mlflow_dynamodbstore/: __init__.py  cache.py  ids.py  job_store.py  registry_store.py  tracking_store.py  workspace_store.py
src/mlflow_dynamodbstore/auth/: app.py  client.py  store.py
src/mlflow_dynamodbstore/cli/: __init__.py  _context.py  cache_spans.py  cleanup_expired.py  delete_workspace.py  denormalize_tags.py  deploy.py  destroy.py  fts.py  fts_trigrams.py  tag.py  trace.py  ttl.py  ttl_policy.py  workspace.py
src/mlflow_dynamodbstore/dynamodb/: config.py  fts.py  keys.py  overflow.py  overflow_cache.py  pagination.py  provisioner.py  schema.py  search.py  table.py  uri.py
src/mlflow_dynamodbstore/jobs/: _early_patch.py  _job_runner.py
src/mlflow_dynamodbstore/otel/: annotation_processor.py
src/mlflow_dynamodbstore/trace_metrics/: __init__.py  accumulators.py  extractors.py  (+2 more)
tests/: conftest.py
tests/compatibility/: comparison.py  conftest.py  field_policy.py  test_comparison.py  test_gateway_compat.py  test_mlflow_registry.py  test_mlflow_tracking.py  test_registry_compat.py  test_registry_contract.py  test_registry_workspace_compat.py  test_tracking_compat.py  test_tracking_contract.py  test_tracking_workspace_compat.py  test_workspace_compat.py  test_workspace_contract.py
tests/e2e/: conftest.py  test_aaa_smoke.py  test_datasets.py  test_demo_generation.py  test_experiments.py  test_logged_models.py  test_models.py  test_runs.py  test_scorers.py  test_trace_metrics.py  test_traces.py  test_workspaces.py
tests/integration/: conftest.py  test_auth.py  test_lifecycle.py  test_provisioner_s3.py  test_registry_crud.py  test_search_models.py  test_search_runs.py  test_trace_metrics.py  test_traces.py  test_tracking_crud.py  test_workspace_crud.py
tests/unit/: conftest.py  test_cache.py  test_ids.py  test_job_store.py  test_logged_models.py  test_mlflow_registry.py  test_mlflow_tracking.py  test_overflow.py  test_provisioner.py  test_registry_search.py  test_registry_store.py  test_search_logged_models.py  test_store_deploy.py  test_trace_metrics_accumulators.py  test_trace_metrics_filters.py  test_trace_metrics_query.py  test_trace_metrics_write_path.py  test_tracking_datasets.py  test_tracking_denormalization.py  test_tracking_scorers.py  test_tracking_search.py  test_tracking_store.py  test_tracking_traces.py  test_ttl.py  test_uri.py  test_webhook_by_event.py  test_workspace_store.py
(+76 files in other folders)
