[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mlflow-dynamodbstore"
dynamic = ["version"]
description = "DynamoDB-backed MLflow tracking store, model registry, and auth plugin"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mlflow>=3.0",
    "boto3",
    "python-ulid>=3.0.0",
    "snowballstemmer",
    "cloup>=3.0.0",
]

[project.scripts]
mlflow-dynamodbstore = "mlflow_dynamodbstore.cli:cli"

[project.entry-points."mlflow.tracking_store"]
dynamodb = "mlflow_dynamodbstore.tracking_store:DynamoDBTrackingStore"

[project.entry-points."mlflow.model_registry_store"]
dynamodb = "mlflow_dynamodbstore.registry_store:DynamoDBRegistryStore"

[project.entry-points."mlflow.app"]
dynamodb-auth = "mlflow_dynamodbstore.auth.app:create_app"

[project.entry-points."mlflow.app.client"]
dynamodb-auth = "mlflow_dynamodbstore.auth.client:DynamoDBAuthClient"

[project.entry-points."mlflow.workspace_provider"]
dynamodb = "mlflow_dynamodbstore.workspace_store:DynamoDBWorkspaceStore"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
    "moto[server,dynamodb,cloudformation]",
    "requests",
    "pre-commit",
    "diff-cover",
    "flask-wtf>=1.2.2",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mike",
    "mkdocs-click",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mlflow_dynamodbstore/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mlflow_dynamodbstore"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/mlflow_dynamodbstore/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["mlflow_dynamodbstore._version"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ulid.*", "snowballstemmer.*", "moto.*", "boto3", "boto3.*", "botocore", "botocore.*", "cloup", "cloup.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mlflow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mlflow_dynamodbstore.cli", "mlflow_dynamodbstore.cli.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["mlflow_dynamodbstore.tracking_store", "mlflow_dynamodbstore.registry_store", "mlflow_dynamodbstore.workspace_store"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests (moto decorator)",
    "integration: integration tests (moto server)",
    "compatibility: MLflow test suite compatibility",
    "smoke: real DynamoDB (needs AWS creds)",
    "e2e: end-to-end tests (mlflow server over HTTP)",
]
addopts = "--strict-markers --import-mode=importlib"
